[build-system]
requires = ["setuptools>=75.0", "wheel>=0.44.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ns-aquaforte"
version = "0.1.0"  # use semantic versioning: bump on every release
description = "LLM-guided SAT solver with phase-adaptive algorithm selection using JAX"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "J. Roberto Jimenez", email = "tijuanapaint@gmail.com"}
]
keywords = [
    "sat",
    "solver",
    "llm",
    "phase-transition",
    "jax",
    "optimization",
    "smt",
    "combinatorial"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed"
]
dependencies = [
    # Core runtime deps — pin minimally to allow flexibility
    "python-sat >= 0.1.8.dev1",
    "jax >= 0.4.35",
    "jaxlib >= 0.4.35",              # required for jax
    "numpy >= 1.24.0",
    "pandas >= 2.0.0",
    "matplotlib >= 3.8.0",
    "seaborn >= 0.13.0",
    "tqdm >= 4.66.0"
]

[project.optional-dependencies]
dev = [
    "pytest >= 7.4",
    "pytest-cov >= 5.0",
    "black >= 24.0",
    "ruff >= 0.6",
    "mypy >= 1.11",
    "types-requests",               # for mypy
]
docs = [
    "sphinx >= 7.0",
    "sphinx-rtd-theme >= 2.0",
    "sphinx-autodoc-typehints >= 2.0"
]
all = [
    "ns-aquaforte[dev,docs]"
]

llm = [


    "openai >= 1.0.0",                # OpenAI (v1+ es el estándar actual)
    "anthropic >= 0.18.0",            # Claude
    "google-generativeai >= 0.4.0",    # Gemini
    "cohere >= 5.0.0",                 # Cohere (v5+ incluye mejoras en async)
    "mistralai >= 0.1.0",              # Mistral (indispensable actualmente)
    "groq >= 0.4.0",                   # Groq (Llama 3 a alta velocidad)
    "transformers >= 4.40.0",          # Hugging Face (v4.40+ para modelos nuevos)
    "accelerate >= 0.26.0",            # Necesario para cargar modelos locales eficientemente
    "ai21 >= 2.0.0",                   # SDK v2 de AI21 Labs
    "xai-sdk >= 0.0.3"                 # Grok (xAI) - verificar disponibilidad en PyPI


]

[project.urls]
Homepage = "https://github.com/deskiziarecords/ns-aquaforte"
Repository = "https://github.com/deskiziarecords/ns-aquaforte"
Issues = "https://github.com/deskiziarecords/ns-aquaforte/issues"
Documentation = "https://ns-aquaforte.readthedocs.io"   # if you plan to use ReadTheDocs

[project.scripts]
ns-aquaforte = "ns_aquaforte.cli:main"

[tool.setuptools.packages.find]
include = ["ns_aquaforte*"]
namespaces = false

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "PL", "UP", "B", "C4", "SIM", "RET"]
ignore = ["E501"]  # line too long — black handles it

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

# Optional: if you ever switch to hatch (cleaner than setuptools)
[tool.hatch.build]
sources = ["src/ns_aquaforte"]
